--- a/src/pages/Edit.css
+++ b/src/pages/Edit.css
@@ -24,11 +24,12 @@
     text-align: center;
 }
 
-.bgg{
+.bgg {
     background-image: url("../Pics/CustomerBG.jpg");
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
     min-width: 100%;
     min-height: 500px;
+    height: 100vh;
 }
