--- a/src/pages/StatusCheck.css
+++ b/src/pages/StatusCheck.css
@@ -16,7 +16,7 @@
     color: #ffffff;
 }
 
-.bgg {
+.bg {
     background-image: url("../Pics/CustomerBG.jpg");
     background-repeat: no-repeat;
     background-position: center center;
